// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Stepper renders horizontal steps 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  padding: 0px;
  overflow: hidden;
  gap: 0 0;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: currentColor;
  stroke: currentColor;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c8 {
  font-size: 18px;
  line-height: 24px;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #7D4CDB;
  font-weight: normal;
}

.c11 {
  font-size: 18px;
  line-height: 24px;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #444444;
  font-weight: normal;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  flex: 1;
  min-width: 0;
  overflow: hidden;
}

.c4 {
  display: flex;
  background: none;
  border: none;
  padding: 3px;
  cursor: pointer;
  outline: none;
  flex-direction: column;
  align-items: center;
  gap: 3px;
  text-align: center;
  width: 100%;
}

.c7 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  transition: transform 0.1s ease,background-color 0.15s ease,border-color 0.15s ease,color 0.15s ease;
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  border: 2px solid;
  background: #7D4CDB;
  color: #FFFFFF;
  border-color: #7D4CDB;
}

.c3:focus-visible .c5 {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus-visible .c5 >circle,
.c3:focus-visible .c5 >ellipse,
.c3:focus-visible .c5 >line,
.c3:focus-visible .c5 >path,
.c3:focus-visible .c5 >polygon,
.c3:focus-visible .c5 >polyline,
.c3:focus-visible .c5 >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus-visible .c5 ::-moz-focus-inner {
  border: 0;
}

.c3:not([aria-disabled]):active .c5 {
  transform: scale(0.95);
}

.c3:not([aria-disabled]):hover .c5 {
  background: color-mix(in srgb, #7D4CDB 80%, black);
  border-color: color-mix(in srgb, #7D4CDB 80%, black);
  color: #FFFFFF;
}

.c10 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  transition: transform 0.1s ease,background-color 0.15s ease,border-color 0.15s ease,color 0.15s ease;
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  border: 2px solid;
  background: #FFFFFF;
  color: #000000;
  border-color: #666666;
}

.c3:focus-visible .c10 {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus-visible .c10 >circle,
.c3:focus-visible .c10 >ellipse,
.c3:focus-visible .c10 >line,
.c3:focus-visible .c10 >path,
.c3:focus-visible .c10 >polygon,
.c3:focus-visible .c10 >polyline,
.c3:focus-visible .c10 >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus-visible .c10 ::-moz-focus-inner {
  border: 0;
}

.c3:not([aria-disabled]):active .c10 {
  transform: scale(0.95);
}

.c3:not([aria-disabled]):hover .c10 {
  background: #FFFFFF;
  border-color: #000000;
  color: color-mix(in srgb, #000000 80%, black);
}

.c9 {
  border-radius: 6px;
  top: calc(24px / 2 + 3px);
  left: calc(-50% + calc(24px / 2 + 3px));
  right: calc(-50% + calc(24px / 2 + 3px));
  height: 2px;
  position: absolute;
  background: rgba(0, 0, 0, 0.33);
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

<div
  class="c0"
>
  <ol
    aria-label="Progress"
    class="c1"
    style="list-style: none;"
  >
    <li
      class="c2"
      direction="horizontal"
    >
      <button
        aria-current="step"
        aria-label="Step 1 of 3: Step 1"
        class="c3 c4"
        direction="horizontal"
        tabindex="0"
        type="button"
      >
        <span
          class="c5"
        >
          <svg
            aria-hidden="true"
            aria-label="Status is okay"
            class="c6"
            viewBox="0 0 12 12"
          >
            <circle
              cx="6"
              cy="6"
              fill-rule="evenodd"
              r="5"
              stroke="#000"
            />
          </svg>
        </span>
        <span
          class="c7"
          direction="horizontal"
        >
          <span
            class="c8"
          >
            Step 1
          </span>
        </span>
      </button>
    </li>
    <li
      aria-hidden="true"
      role="presentation"
      style="display: flex; flex-direction: column; position: relative; flex: 1; overflow: visible; align-items: center; min-width: 12px;"
    >
      <span
        aria-hidden="true"
        class="c9"
        direction="horizontal"
      />
    </li>
    <li
      class="c2"
      direction="horizontal"
    >
      <button
        aria-label="Step 2 of 3: Step 2"
        class="c3 c4"
        direction="horizontal"
        tabindex="-1"
        type="button"
      >
        <span
          class="c10"
        />
        <span
          class="c7"
          direction="horizontal"
        >
          <span
            class="c11"
          >
            Step 2
          </span>
        </span>
      </button>
    </li>
    <li
      aria-hidden="true"
      role="presentation"
      style="display: flex; flex-direction: column; position: relative; flex: 1; overflow: visible; align-items: center; min-width: 12px;"
    >
      <span
        aria-hidden="true"
        class="c9"
        direction="horizontal"
      />
    </li>
    <li
      class="c2"
      direction="horizontal"
    >
      <button
        aria-label="Step 3 of 3: Step 3"
        class="c3 c4"
        direction="horizontal"
        tabindex="-1"
        type="button"
      >
        <span
          class="c10"
        />
        <span
          class="c7"
          direction="horizontal"
        >
          <span
            class="c11"
          >
            Step 3
          </span>
        </span>
      </button>
    </li>
  </ol>
</div>
`;

exports[`Stepper renders outside Grommet wrapper 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  padding: 0px;
  overflow: hidden;
  gap: 0 0;
}

.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: currentColor;
  stroke: currentColor;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #7D4CDB;
  font-weight: normal;
}

.c10 {
  font-size: 18px;
  line-height: 24px;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #444444;
  font-weight: normal;
}

.c1 {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  flex: 1;
  min-width: 0;
  overflow: hidden;
}

.c3 {
  display: flex;
  background: none;
  border: none;
  padding: 3px;
  cursor: pointer;
  outline: none;
  flex-direction: column;
  align-items: center;
  gap: 3px;
  text-align: center;
  width: 100%;
}

.c6 {
  display: flex;
  flex-direction: column;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  transition: transform 0.1s ease,background-color 0.15s ease,border-color 0.15s ease,color 0.15s ease;
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  border: 2px solid;
  background: #7D4CDB;
  color: #FFFFFF;
  border-color: #7D4CDB;
}

.c2:focus-visible .c4 {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus-visible .c4 >circle,
.c2:focus-visible .c4 >ellipse,
.c2:focus-visible .c4 >line,
.c2:focus-visible .c4 >path,
.c2:focus-visible .c4 >polygon,
.c2:focus-visible .c4 >polyline,
.c2:focus-visible .c4 >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus-visible .c4 ::-moz-focus-inner {
  border: 0;
}

.c2:not([aria-disabled]):active .c4 {
  transform: scale(0.95);
}

.c2:not([aria-disabled]):hover .c4 {
  background: color-mix(in srgb, #7D4CDB 80%, black);
  border-color: color-mix(in srgb, #7D4CDB 80%, black);
  color: #FFFFFF;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  transition: transform 0.1s ease,background-color 0.15s ease,border-color 0.15s ease,color 0.15s ease;
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  border: 2px solid;
  background: #FFFFFF;
  color: #000000;
  border-color: #666666;
}

.c2:focus-visible .c9 {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus-visible .c9 >circle,
.c2:focus-visible .c9 >ellipse,
.c2:focus-visible .c9 >line,
.c2:focus-visible .c9 >path,
.c2:focus-visible .c9 >polygon,
.c2:focus-visible .c9 >polyline,
.c2:focus-visible .c9 >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus-visible .c9 ::-moz-focus-inner {
  border: 0;
}

.c2:not([aria-disabled]):active .c9 {
  transform: scale(0.95);
}

.c2:not([aria-disabled]):hover .c9 {
  background: #FFFFFF;
  border-color: #000000;
  color: color-mix(in srgb, #000000 80%, black);
}

.c8 {
  border-radius: 6px;
  top: calc(24px / 2 + 3px);
  left: calc(-50% + calc(24px / 2 + 3px));
  right: calc(-50% + calc(24px / 2 + 3px));
  height: 2px;
  position: absolute;
  background: rgba(0, 0, 0, 0.33);
}

@media only screen and (max-width: 768px) {
  .c0 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c0 {
    padding: 0px;
  }
}

<ol
  aria-label="Progress"
  class="c0"
  style="list-style: none;"
>
  <li
    class="c1"
    direction="horizontal"
  >
    <button
      aria-current="step"
      aria-label="Step 1 of 3: Step 1"
      class="c2 c3"
      direction="horizontal"
      tabindex="0"
      type="button"
    >
      <span
        class="c4"
      >
        <svg
          aria-hidden="true"
          aria-label="Status is okay"
          class="c5"
          viewBox="0 0 12 12"
        >
          <circle
            cx="6"
            cy="6"
            fill-rule="evenodd"
            r="5"
            stroke="#000"
          />
        </svg>
      </span>
      <span
        class="c6"
        direction="horizontal"
      >
        <span
          class="c7"
        >
          Step 1
        </span>
      </span>
    </button>
  </li>
  <li
    aria-hidden="true"
    role="presentation"
    style="display: flex; flex-direction: column; position: relative; flex: 1; overflow: visible; align-items: center; min-width: 12px;"
  >
    <span
      aria-hidden="true"
      class="c8"
      direction="horizontal"
    />
  </li>
  <li
    class="c1"
    direction="horizontal"
  >
    <button
      aria-label="Step 2 of 3: Step 2"
      class="c2 c3"
      direction="horizontal"
      tabindex="-1"
      type="button"
    >
      <span
        class="c9"
      />
      <span
        class="c6"
        direction="horizontal"
      >
        <span
          class="c10"
        >
          Step 2
        </span>
      </span>
    </button>
  </li>
  <li
    aria-hidden="true"
    role="presentation"
    style="display: flex; flex-direction: column; position: relative; flex: 1; overflow: visible; align-items: center; min-width: 12px;"
  >
    <span
      aria-hidden="true"
      class="c8"
      direction="horizontal"
    />
  </li>
  <li
    class="c1"
    direction="horizontal"
  >
    <button
      aria-label="Step 3 of 3: Step 3"
      class="c2 c3"
      direction="horizontal"
      tabindex="-1"
      type="button"
    >
      <span
        class="c9"
      />
      <span
        class="c6"
        direction="horizontal"
      >
        <span
          class="c10"
        >
          Step 3
        </span>
      </span>
    </button>
  </li>
</ol>
`;

exports[`Stepper renders vertical steps 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
  padding: 0px;
  overflow: hidden;
  gap: 0 0;
}

.c11 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: currentColor;
  stroke: currentColor;
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c11 *[stroke*='#'],
.c11 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*='#'],
.c11 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  font-weight: normal;
}

.c12 {
  font-size: 18px;
  line-height: 24px;
  color: #7D4CDB;
  font-weight: normal;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: flex-start;
  padding-bottom: 3px;
}

.c4 {
  display: flex;
  background: none;
  border: none;
  padding: 3px;
  cursor: pointer;
  outline: none;
  flex-direction: row;
  align-items: flex-start;
  gap: 12px;
  text-align: left;
}

.c6 {
  display: flex;
  flex-direction: column;
  padding-top: calc((24px - 20px) / 2);
}

.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  transition: transform 0.1s ease,background-color 0.15s ease,border-color 0.15s ease,color 0.15s ease;
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  border: 2px solid;
  background: #FFFFFF;
  color: #000000;
  border-color: #666666;
}

.c3:focus-visible .c5 {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus-visible .c5 >circle,
.c3:focus-visible .c5 >ellipse,
.c3:focus-visible .c5 >line,
.c3:focus-visible .c5 >path,
.c3:focus-visible .c5 >polygon,
.c3:focus-visible .c5 >polyline,
.c3:focus-visible .c5 >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus-visible .c5 ::-moz-focus-inner {
  border: 0;
}

.c3:not([aria-disabled]):active .c5 {
  transform: scale(0.95);
}

.c3:not([aria-disabled]):hover .c5 {
  background: #FFFFFF;
  border-color: #000000;
  color: color-mix(in srgb, #000000 80%, black);
}

.c10 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  transition: transform 0.1s ease,background-color 0.15s ease,border-color 0.15s ease,color 0.15s ease;
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  border: 2px solid;
  background: #7D4CDB;
  color: #FFFFFF;
  border-color: #7D4CDB;
}

.c3:focus-visible .c10 {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus-visible .c10 >circle,
.c3:focus-visible .c10 >ellipse,
.c3:focus-visible .c10 >line,
.c3:focus-visible .c10 >path,
.c3:focus-visible .c10 >polygon,
.c3:focus-visible .c10 >polyline,
.c3:focus-visible .c10 >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus-visible .c10 ::-moz-focus-inner {
  border: 0;
}

.c3:not([aria-disabled]):active .c10 {
  transform: scale(0.95);
}

.c3:not([aria-disabled]):hover .c10 {
  background: color-mix(in srgb, #7D4CDB 80%, black);
  border-color: color-mix(in srgb, #7D4CDB 80%, black);
  color: #FFFFFF;
}

.c8 {
  border-radius: 6px;
  left: calc( calc(24px / 2 + 3px) + 2px - 2px / 2 );
  top: calc(24px + 3px * 3);
  bottom: 0;
  width: 2px;
  position: absolute;
  background: rgba(0, 0, 0, 0.33);
}

.c9 {
  border-radius: 6px;
  left: calc( calc(24px / 2 + 3px) + 2px - 2px / 2 );
  top: 0;
  bottom: 0;
  width: 2px;
  position: absolute;
  background: rgba(0, 0, 0, 0.33);
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

<div
  class="c0"
>
  <ol
    aria-label="Progress"
    class="c1"
    style="list-style: none;"
  >
    <li
      class="c2"
      direction="vertical"
    >
      <button
        aria-label="Step 1 of 3: Step 1"
        class="c3 c4"
        direction="vertical"
        tabindex="-1"
        type="button"
      >
        <span
          class="c5"
        />
        <span
          class="c6"
          direction="vertical"
        >
          <span
            class="c7"
          >
            Step 1
          </span>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="c8"
        direction="vertical"
      />
    </li>
    <li
      aria-hidden="true"
      role="presentation"
      style="display: flex; flex-direction: column; position: relative; flex: 1; overflow: visible; justify-content: flex-start; min-height: 12px;"
    >
      <span
        aria-hidden="true"
        class="c9"
        direction="vertical"
      />
    </li>
    <li
      class="c2"
      direction="vertical"
    >
      <button
        aria-current="step"
        aria-label="Step 2 of 3: Step 2"
        class="c3 c4"
        direction="vertical"
        tabindex="0"
        type="button"
      >
        <span
          class="c10"
        >
          <svg
            aria-hidden="true"
            aria-label="Status is okay"
            class="c11"
            viewBox="0 0 12 12"
          >
            <circle
              cx="6"
              cy="6"
              fill-rule="evenodd"
              r="5"
              stroke="#000"
            />
          </svg>
        </span>
        <span
          class="c6"
          direction="vertical"
        >
          <span
            class="c12"
          >
            Step 2
          </span>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="c8"
        direction="vertical"
      />
    </li>
    <li
      aria-hidden="true"
      role="presentation"
      style="display: flex; flex-direction: column; position: relative; flex: 1; overflow: visible; justify-content: flex-start; min-height: 12px;"
    >
      <span
        aria-hidden="true"
        class="c9"
        direction="vertical"
      />
    </li>
    <li
      class="c2"
      direction="vertical"
    >
      <button
        aria-label="Step 3 of 3: Step 3"
        class="c3 c4"
        direction="vertical"
        tabindex="-1"
        type="button"
      >
        <span
          class="c5"
        />
        <span
          class="c6"
          direction="vertical"
        >
          <span
            class="c7"
          >
            Step 3
          </span>
        </span>
      </button>
    </li>
  </ol>
</div>
`;
